--- a/dinamicas.html
+++ b/dinamicas.html
@@ -72,6 +72,7 @@
                         <table class="estructura-interna" border="1">
                             <thead>
                                 <tr>
+                                    <th>Indice</th>
                                     <th>Posición</th>
                                     <th>Clave</th>
                                 </tr>
