--- a/DinamicasTotales/index.html
+++ b/DinamicasTotales/index.html
@@ -26,11 +26,13 @@
 
     <form id="Form">
         <label for="label" id="label">Ingrese la clave</label>
-        <input type="text" id="Clave" placeholder="Clave "> <!--Placeholder con id clave, es el que recibe los datos-->
+        <input type="text" id="Clave" placeholder="Clave a insertar"> <!--Placeholder con id clave, es el que recibe los datos-->
         <button type="button" id="registrar" onclick="registrarDatos()">Registrar</button><!--mi boton al que le mando la funcion del arreglo del usuario-->
         <button type="button" id="registrar2" onclick="registroAutomatico()">Registro Automatico</button><!--mi boton al que le mando la funcion del arreglo predefinido-->
         <input type="text" id="Buqueda" placeholder="Clave a buscar "> <!--Placeholder con id clave, es el que recibe los datos-->
         <button type="button" id="buscar" onclick="buscarDatos()">Buscar</button><!--mi boton al que le mando la funcion del arreglo del usuario-->
+        <input type="text" id="Eliminar" placeholder="Clave a eliminarr "> <!--Placeholder con id clave, es el que recibe los datos-->
+        <button type="button" id="eliminar" onclick="eliminarDatos()">Eliminar</button><!--mi boton al que le mando la funcion del arreglo del usuario-->
         <!-- <input type="text" id="Borrar" placeholder="Clave    a borrar "> Placeholder con id clave, es el que recibe los datos -->
         <!-- <button type="button" id="borrar" onclick="borrarDatos()">Borrar</button>mi boton al que le mando la funcion del arreglo del usuario -->
     </form>
