--- a/arboles.html
+++ b/arboles.html
@@ -22,7 +22,8 @@
         <ul id="menu">
             <a href="internas.html"><li>Búsquedas internas</li></a>
             <a href="externas.html"><li>Búsquedas externas</li></a>
-            <a href="DinamicasTotales/index.html"><li>Dinámicas</li></a>
+            <a href="DinamicasTotales/index.html"><li>Dinámicas totales</li></a>
+            <a href="../DinamicasParciales/index.html"><li>Dinámicas parciales</li></a>
             <a href="indices.html"><li>Índices</li></a>
             <a href="arboles.html"><li>Árboles</li></a>
         </ul>
