--- a/DinamicasTotales/index.html
+++ b/DinamicasTotales/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/internas.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="header" data-dark="">
         <h1>DINÁMICAS TOTALES</h1>
@@ -18,7 +19,8 @@
         <ul id="menu">
             <a href="../internas.html"><li>Búsquedas internas</li></a>
             <a href="../externas.html"><li>Búsquedas externas</li></a>
-            <a href="../DinamicasTotales/index.html"><li>Dinámicas</li></a>
+            <a href="../DinamicasTotales/index.html"><li>Dinámicas totales</li></a>
+            <a href="../DinamicasParciales/index.html"><li>Dinámicas parciales</li></a>
             <a href="../indices.html"><li>Índices</li></a>
             <a href="../arboles.html"><li>Árboles</li></a>
         </ul>
@@ -31,7 +33,7 @@
         <button type="button" id="registrar2" onclick="registroAutomatico()">Registro Automatico</button><!--mi boton al que le mando la funcion del arreglo predefinido-->
         <input type="text" id="Buqueda" placeholder="Clave a buscar "> <!--Placeholder con id clave, es el que recibe los datos-->
         <button type="button" id="buscar" onclick="buscarDatos()">Buscar</button><!--mi boton al que le mando la funcion del arreglo del usuario-->
-        <input type="text" id="Eliminar" placeholder="Clave a eliminarr "> <!--Placeholder con id clave, es el que recibe los datos-->
+        <input type="text" id="Eliminar" placeholder="Clave a eliminar "> <!--Placeholder con id clave, es el que recibe los datos-->
         <button type="button" id="eliminar" onclick="eliminarDatos()">Eliminar</button><!--mi boton al que le mando la funcion del arreglo del usuario-->
         <!-- <input type="text" id="Borrar" placeholder="Clave    a borrar "> Placeholder con id clave, es el que recibe los datos -->
         <!-- <button type="button" id="borrar" onclick="borrarDatos()">Borrar</button>mi boton al que le mando la funcion del arreglo del usuario -->
